--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,10 @@ out/
 ### VS Code ###
 .vscode/
 
+### Spring Boot ###
+/src/main/resources/application.properties
 src/main/resources/application.properties
+application.properties
+application.yml
+application-*.properties
+/application.properties
