--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=rutina
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/rehappy
+spring.datasource.url=jdbc:mysql://localhost:3306/rutinai
 spring.datasource.username=root
-spring.datasource.password=0000
+spring.datasource.password=20214023
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
