--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,6 @@ ext {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -40,6 +39,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.security:spring-security-crypto:5.7.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // ChatGpt 관련
+    implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebFlux 의존성
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
     // JWT 관련 라이브러리
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
